--- a/.github/workflows/Build_OPenworld_x86_64.yml
+++ b/.github/workflows/Build_OPenworld_x86_64.yml
@@ -1,7 +1,7 @@
 #=================================================
 # Description: Build OpenWrt using GitHub Actions
-# Lisence: MIT/HUHU
-# Author: Samuel/eSirPlayground
+# Lisence: MIT
+# Author: eSirPlayground
 # Youtube Channel: https://DontLook
 #=================================================
 
